--- a/TinyDreams/src/pages/css/productList.css
+++ b/TinyDreams/src/pages/css/productList.css
@@ -101,6 +101,18 @@ body {
     border: 1px solid black;
 }
 
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
 
 .view-product-container {
     width: 100%;
