--- a/TinyDreams/src/components/css/oneProduct.css
+++ b/TinyDreams/src/components/css/oneProduct.css
@@ -1,16 +1,21 @@
-.tags-container {
+.tag {
+    font-size: 12px; /* גודל קטן יותר */
+    padding: 4px 8px;
+    border-radius: 12px;
+}
+.product-list-container li {
     display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-    margin-top: 5px;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%; /* יוודא שכל הכרטיסים מיושרים לגובה מלא */
 }
 
-.tag {
-    background-color: #f3c4ce;
-    color: #5c4033;
-    padding: 5px 10px;
-    border-radius: 15px;
-    font-size: 12px;
-    font-weight: bold;
-    text-transform: uppercase;
+.product-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 450px; /* הגובה האחיד לכרטיס */
+}
+.product-card-content {
+    flex-grow: 1;
 }
