--- a/TinyDreams/src/pages/css/productList.css
+++ b/TinyDreams/src/pages/css/productList.css
@@ -66,7 +66,7 @@ body {
   padding: 0;
   margin: 0 auto;
   justify-content: center;
-  align-items: stretch;
+  align-items: start;
 }
 
 /* כל פריט ברשימת המוצרים */
