--- a/TinyDreams/src/App.css
+++ b/TinyDreams/src/App.css
@@ -2,3 +2,9 @@ body {
   font-family: "Fredoka", sans-serif;
   
 }
+.bodyContent{
+background-color: blue ;
+margin-top:0px ;
+padding-bottom:0px;
+padding-top:0px;
+}
